[package]
name = "chrysalis-snapshot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bee-ledger = "0.5.0"
bee-common = "0.4.1"
bee-message = "0.1.5"
bee-tangle = "0.1.2"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }
serde = "1.0.130"
serde_json = "1.0.72"